<resources>
    <string name="app_name">Score_Test</string>
    <string name="TemplateActivity_btn_camera">템플릿 촬영</string>
    <string name="TemplateActivity_btn_album">앨범에서 선택</string>
    <string name="TemplateActivity_img_test">TemplateActivity_img_test</string>
    <string name="SelectActivity_templCaptureBtn">템플릿 수정</string>
    <string name="SelectActivity_Hands_Free_Check_OFF">Hands-Free   OFF</string>
    <string name="SelectActivity_Hands_Free_Check_ON">Hands-Free   ON</string>
</resources>